# statica

./: Cargo.toml  README.md
src/: appstate.rs  ar.rs  main.rs
