[package]
name = "statica"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
arc-swap = "1.7"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
chrono = "0.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv = "0.15.0"
anyhow = "1.0.98"