[package]
name = "statica"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
arc-swap = "1.7"
tower-http = { version = "0.6.6", features = ["fs","set-header","compression-br"] }
chrono = { version = "0.4", features = ["serde"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv = "0.15.0"
anyhow = "1.0.98"
zip = "4.3.0"

tower = "0.5.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.3"
reqwest = { version = "0.12.22", features = ["json","rustls-tls"], default-features = false}
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
